# rhts

./: .Rbuildignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md
R/: extendr-wrappers.R
man/: Hts.Rd  HtsSpec.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  rhts-win.def
src/rust/: Cargo.toml  vendor-config.toml
src/rust/src/: helpers.rs  hierarchy.rs  lib.rs
