[package]
name = 'rhts'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.84'

[lib]
crate-type = [ 'staticlib' ]
name = 'rhts'

[dependencies]
extendr-api = {git = 'https://github.com/extendr/extendr.git'}
hts-core = { git = "https://github.com/albersonmiranda/hts-rs" }
polars = { version = "0.46", features = ["lazy", "csv"] }

[profile.release]
lto = true
codegen-units = 1
